k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apiseries-api-token
spec:
  selector:
    app: apiseries-api-token
  ports:
    - protocol: TCP
      port: 80       # Puerto expuesto por el servicio
      targetPort: 8000 # Puerto del contenedor
  type: LoadBalancer   # Docker Desktop soporta LoadBalancer localmente
