k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiseries-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /\$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /apis/nodes/channel-credentials
        pathType: Exact
        backend:
          service:
            name: apiseries-api-channel-credentials
            port:
              number: 8000
